<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Class Manager</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_notes">Notes</string>
    <string name="title_classes">Classes</string>
    <string name="title_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_main">Main action</string>
    <string name="action_tasks">Tasks action</string>
    <string name="action_settings">Settings</string>
    <string name="date_added">Date added</string>
    <string name="name">Name</string>
    <string name="change_data">Change data</string>
    <string name="text">Text</string>
    <string name="register">Register</string>

    <!-- Menu actions -->
    <string name="add_note">Add note</string>
    <string name="add_task">Add task</string>
    <string name="add_class">Add class</string>
    <string name="add_announcement">Add announcement</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sample_short">Sample</string>
    <string name="sample_long">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</string>
    <string name="str_dayview">Dayview</string>
    <string name="str_monthview">Monthview</string>
    <string name="logout">Logout</string>
    <string name="stub_img_desc">Description of image</string>
    <string name="list_item_background">Sticky part of list item</string>

    <!-- AddTask activity -->
    <string name="str_class">Class</string>
    <string name="str_type">Type</string>
    <string name="str_deadline">Deadline</string>
    <string name="str_title">Title</string>
    <string name="str_details">Details</string>
    <string name="class_spinner_title">Choose a class</string>

    <!-- AddClass activity -->
    <string name="str_class_name">Class name</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="class_color">Class color</string>
    <string name="classroom">Classroom</string>
    <string name="schedule">Schedule</string>
    <string name="set_time">Set time</string>

    <!-- Dashboard Fragment -->
    <string name="announcements">Announcements</string>
    <string name="todays_lessons">Today\'s lessons</string>
    <string name="upcoming">Upcoming</string>

    <!-- Welcome activity -->
    <string name="logo_description">Logo image</string>
    <string name="welcome_cm">Welcome to Class Manager</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="use_offline">Use offline</string>

    <!-- Login activity -->
    <string name="login_text">Please enter your credentials</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- Register activity -->
    <string name="register_text">Let\'s get to know each other</string>
    <string name="my_name">My name is</string>
    <string name="iama">I am a</string>
    <string name="my_email">My email</string>
    <string name="my_password">My password</string>
    <string name="done">Done</string>

    <!-- Days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="abr_monday">Mon</string>
    <string name="abr_tuesday">Tue</string>
    <string name="abr_wednesday">Wed</string>
    <string name="abr_thursday">Thu</string>
    <string name="abr_friday">Fri</string>
    <string name="abr_saturday">Sat</string>
    <string name="abr_sunday">Sun</string>

     <string-array name="user_types">
        <item>Student</item>
        <item>Professor</item>
    </string-array>
    
    <string-array name="task_types">
        <item>Assignment</item>
        <item>Project</item>
        <item>Exam</item>
    </string-array>
    <string-array name="tasks_spinner_items">
        <item>Date</item>
        <item>Class</item>
        <item>Type</item>
    </string-array>
    <string-array name="notes_spinner_items">
        <item>Date</item>
        <item>Class</item>
        <item>Type</item>
    </string-array>
    <string-array name="classes_spinner_items">
        <item>Date</item>
        <item>Type</item>
    </string-array>

    <string name="preference_file">com.licenta.classmanager.PREFERENCE_FILE</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_note">Add Note</string>
    <string name="title_activity_add_class">Add Class</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_class_details">Class Details</string>
    <string name="title_activity_note_details">Note Details</string>
    <string name="title_activity_task_details">Task Details</string>
    <string name="title_activity_announcement_details">Announcement Details</string>
    <string name="title_activity_announcement_add_edit">Add Announcement</string>

</resources>