<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_class_name"
                android:textSize="@dimen/component_header" />

            <EditText
                android:id="@+id/et_className"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>
        
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classroom"
                android:textSize="@dimen/component_header" />

            <EditText
                android:id="@+id/et_classroom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>
        
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txt_pick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/class_color"
                android:textSize="@dimen/component_header" />

            <Button
                android:id="@+id/btn_color"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:background="@color/black"
                android:layout_height="match_parent" />
        </LinearLayout>
        
          <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule"
                android:textSize="@dimen/component_header" />
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="2dp"
                android:text="@string/abr_monday" />

            <CheckBox
                android:id="@+id/cb_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/abr_tuesday" />

            <CheckBox
                android:id="@+id/cb_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/abr_wednesday" />

            <CheckBox
                android:id="@+id/cb_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/abr_thursday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="8dp" >

            <CheckBox
                android:id="@+id/cb_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/abr_friday" />

            <CheckBox
                android:id="@+id/cb_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/abr_saturday" />

            <CheckBox
                android:id="@+id/cb_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/abr_sunday" />
        </LinearLayout>

       <RelativeLayout 
           android:layout_width="match_parent"
           android:layout_height="wrap_content">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:id="@+id/txt_start_time"
                android:text="@string/start_time"
                android:textSize="@dimen/component_header" />

             <Button
                     android:id="@+id/btn_start_time"
                     android:layout_below="@id/txt_start_time"
                     android:layout_width="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_height="wrap_content"
                     android:text="@string/set_time" />




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:id="@+id/txt_end_time"
                android:text="@string/end_time"
                android:textSize="@dimen/component_header" />
            
             <Button
                     android:id="@+id/btn_end_time"
                     android:layout_width="wrap_content"
                     android:layout_below="@id/txt_end_time"
                     android:layout_alignParentRight="true"
                     android:layout_height="wrap_content"
                     android:text="@string/set_time" />
            
            
            
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingBottom="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_details"
                android:textSize="@dimen/component_header" />

            <EditText
                android:id="@+id/et_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="5" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>