<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_class_name"
                android:textSize="@dimen/component_header" />

            <TextView
                android:id="@+id/txt_className"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classroom"
                android:textSize="@dimen/component_header" />

            <TextView
                android:id="@+id/txt_classroom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txt_pick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/class_color"
                android:textSize="@dimen/component_header" />

            <Button
                android:id="@+id/btn_color"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@color/black" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule"
            android:textSize="@dimen/component_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:padding="2dp"
                android:text="@string/abr_monday" />

            <CheckBox
                android:id="@+id/cb_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:padding="2dp"
                android:text="@string/abr_tuesday" />

            <CheckBox
                android:id="@+id/cb_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:padding="2dp"
                android:text="@string/abr_wednesday" />

            <CheckBox
                android:id="@+id/cb_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:padding="2dp"
                android:text="@string/abr_thursday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="8dp" >

            <CheckBox
                android:id="@+id/cb_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:padding="2dp"
                android:text="@string/abr_friday" />

            <CheckBox
                android:id="@+id/cb_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:padding="2dp"
                android:text="@string/abr_saturday" />

            <CheckBox
                android:id="@+id/cb_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:padding="2dp"
                android:text="@string/abr_sunday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:layout_gravity="left"
                android:textSize="@dimen/component_header" />
            
            <TextView
                android:id="@+id/txt_startTime"
                android:layout_width="fill_parent"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="@dimen/component_header" />
        </LinearLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textSize="@dimen/component_header" />
            
            <TextView
                android:id="@+id/txt_endTime"
                 android:layout_width="fill_parent"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="@dimen/component_header" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_details"
                android:textSize="@dimen/component_header" />

            <TextView
                android:id="@+id/txt_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>