<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_class"
             />

        <TextView
            android:id="@+id/txt_class"
            android:layout_width="match_parent"
            android:textSize="@dimen/component_header"
            android:text="Calcul numeric"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_added"
             />

        <TextView
            android:id="@+id/txt_dateAdded"
            android:layout_width="match_parent"
            android:textSize="@dimen/component_header"
            android:text="03.07.2014"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_title"
             />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:textSize="@dimen/component_header"
            android:text="Project due date reminder"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top" />

</LinearLayout>